Updated API with new changes